--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.4",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
+    "@openzeppelin/contracts": "^4.4.2",
     "chai": "^4.3.6",
+    "dotenv": "^14.3.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.9",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.3",
-    "hardhat": "^2.8.3"
+    "hardhat": "^2.8.3",
+    "tailwindcss": "^3.0.17",
+    "web3": "^1.7.0"
   }
 }
